// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Componenti/Modal Bottone di chiusura 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <div
      style={
        Object {
          "padding": 10,
          "position": "relative",
        }
      }
    >
      <button
        className="close btn btn-secondary"
        onClick={[Function]}
        style={
          Object {
            "position": "absolute",
          }
        }
        type={undefined}
      >
        ×
      </button>
    </div>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "BottoneChiusura.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Modal Centratura verticale 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <div>
      <button
        className="btn btn-primary"
        onClick={[Function]}
        type="button"
      >
        Lancia la demo della modale
      </button>
    </div>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "CentraturaVerticale.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Modal Demo 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <div>
      <button
        className="btn btn-primary"
        onClick={[Function]}
        type="button"
      >
        Lancia la demo della modale
      </button>
    </div>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Demo.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Modal Dimensioni 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <div>
      <div>
        <button
          className="mr-3 btn btn-primary"
          onClick={[Function]}
          type="button"
        >
          Modale grande
        </button>
        <button
          className="btn btn-primary"
          onClick={[Function]}
          type="button"
        >
          Modale piccola
        </button>
      </div>
    </div>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Dimensioni.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Modal Esempi 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <div
      style={
        Object {
          "padding": "100px 300px",
        }
      }
    >
      <div
        className="modal-content"
      >
        <div
          className="modal-header"
        >
          <h5
            className="modal-title"
          >
            Titolo della modale
          </h5>
        </div>
        <div
          className="modal-body"
        >
          Il testo del corpo della modale va qui.
        </div>
        <div
          className="modal-footer"
        >
          <button
            className="btn btn-secondary"
            onClick={[Function]}
            type={undefined}
          >
            Chiudi
          </button>
          <button
            className="btn btn-primary"
            onClick={[Function]}
            type={undefined}
          >
            Salva le modifiche
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Esempi.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Modal Rimuovere l’animazione 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <div>
      <button
        className="btn btn-primary"
        onClick={[Function]}
        type="button"
      >
        Lancia la demo della modale
      </button>
    </div>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "RimuovereAnimazione.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Modal Scroll di contenuti lunghi 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <div>
      <button
        className="btn btn-primary"
        onClick={[Function]}
        type="button"
      >
        Lancia la demo della modale
      </button>
    </div>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "ScrollContenutiLunghi.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Modal Tooltip and popover 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <div>
      <button
        className="btn btn-primary"
        onClick={[Function]}
        type="button"
      >
        Lancia la demo della modale
      </button>
    </div>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "TooltipPopover.md",
      }
    }
  />
</div>
`;

exports[`Storyshots Componenti/Modal Uso della griglia 1`] = `
<div
  style={
    Object {
      "padding": "10px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#ffffff",
        "border": "1px dashed #e5e5e5",
        "boxSizing": "border-box",
        "margin": "16px 0 16px 0",
        "padding": "50px 35px",
        "position": "relative",
        "textAlign": "initial",
        "transition": "background-color 0.2s",
      }
    }
  >
    <div>
      <button
        className="btn btn-primary"
        onClick={[Function]}
        type="button"
      >
        Lancia la demo della modale
      </button>
    </div>
  </div>
  <div
    className="markdown-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "UsoGriglia.md",
      }
    }
  />
</div>
`;
